app/webroot/css/1053.css
/* ... */
h2, h3, h4, h5, h6, h7, h8, h9, h10 { 
	font-size: 120%; 
	padding-top: 5px; 
	font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;
	color: #325A8A; 
	margin-bottom:5px;  
}
h2{
	font-size: 140%; 
}
h3 {
	font-size:120%;
	font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;
}
input {
	font-size: 1em; 
}
input[type='submit'] {
	cursor:pointer;
}
a {
	color: #2c5d97; 
	outline: 0;
	font-weight: bold;
}
h3 a, .news h3 a:link{
	font-weight: bold;
	text-decoration: none;
}
a:hover {
	text-decoration: underline; 
}
.abtn {
	width: 120px; 
	height : 40px;
	background-color:#2c5d97; 
	color: white; 
	font-size : 14pt;
	cursor: hand;
}
ul, li {
	margin:0;
}

.left {
	float:left;
}

.right {
	float:right;
}

img.left {
	margin:0 1em 1em 0;
}

img.right {
	margin:0 0 1em 1em;
}
#content {
	overflow:hidden;
}

/* Common */
#wrapper, #page, #banner {
	background-color: #ffffff; 
}
#browsertools li, #browsertools li a, #browsertools, #homeleftcol, #homeleftcoltop, #homeleftcolbot, #homemidcol, #homemidcoltop, #homemidcolbot, #homemidcolbot2, #leftcol, #maincolsearch .widecol, #maincolsearch .narrowcol, #maincol, #maincolbot, #maincolwrap, #midcoltop, #banner img#bannerimage, #banner #sitename, #logo{
	float: left; 
}
.latesttweets .followus, #fontsize, #homerightcol, #homerightcoltop, #homerightcolbot, #rightcol, #browsertools ul, #countdown, .latesttweets, #search {
	float: right; 
} 
#homemidcoltop, #homemidcolbot, #homemidcolbot2, #homerightcoltop, #homerightcolbot{
	padding: 0px; 
	margin: 0px;  
}
#browsertools, #browsertools li a{
	color: #2E598A; 
	font-size: 100%; 
}
.latesttweets .followus, #countdowntextdays a, div#breadcrumb a {
	text-decoration: none; 
}
.latesttweets a:hover, #countdowntextdays a:hover, div#breadcrumb a:hover, #footer a, #footer a:hover {
	text-decoration: underline;
}
.center {
	text-align:center;
}

/* Page structure */
#wrapper {
	margin: auto; 
	width: 960px; 
	padding: 0px 5px; 
}
#maincolwrap {
	margin: 0px;
}
#page { 
	clear: both; 
}
.fullwidth, #topbar2, #topbar, #banner{
	width: 960px;
}
#content {
	padding: 0px 5px 0px 20px; 
}

/*browsertools*/	
#topbar, #topbar2 {
	margin: auto;
	overflow: visible; 
}
#fontsize{
	font-size: 14px;
}
#fontsize, fontsize a{
	margin-bottom:4px; 
	margin-right: 2px;
}
.selectedfont {
	border: 1px solid #2E598A;
}
#font_s{
	font-size: 10px;
}
#font_m{
	font-size: 14px;
}
#font_l{
	font-size: 18px;
}
#font_xl{
	font-size: 22px;
}

/* Top Menu - including text resizing */
#browsertools { 
	padding-top: 10px; 
	overflow: visible; 
	zoom: 1; 
	margin-right: -10px; 
	margin-left: 5px;
}
#browsertools ul {
	padding: 0px 0px 0px -5px;
}
#browsertools li a {
	text-decoration: none;
} 
#browsertools li a:hover {
	text-decoration: underline;
}
#browsertools li {
	padding: 0px;
}

/* banner and header styles */
#banner {
	margin: 0px; 
	overflow: auto; 
	zoom: 1;
}
#banner h1
{
	width: 456px;
	height: 129px;
}  
#banner h1 a{
	display: block;
	width: 500px;
	height: 129px;
	/*background-image: url(/img/champions-for-health-logo.gif);*/
	background-image: url(/img/new-logo2.png);
	background-repeat: no-repeat;
	text-indent: -9000px;
}

/*tweets plugin - Top Right Module */ 
.latesttweets {
	min-height:70px; 
	height:auto!important; 
	height:70px;  
	overflow: auto; 
	width: 415px; 
	font-size: 100%; 
	margin: 10px 0px 10px 5px;
	border: 1px solid #FFC709;
	clear: right;
} 
.latesttweets .followus, .latesttweets .body, .latesttweets .date, .latesttweets h2, .latesttweets ul{
	color: #000000;
	margin: 0;  
}
.latesttweets h2 {
	margin: 5px 5px 2px 5px; 
}
.latesttweets ul {
	margin: 5px 5px; 
	list-style-type: none;
}
.latesttweets li {
	zoom: 1; 
	overflow: auto;
}
.latesttweets .date, .latesttweets .body {
	font-size: 95%; 
	font-weight: normal;
}
.latesttweets .newsitem {
	margin-left: 0px; 
	margin-bottom: 0px;
}
.latesttweets .title {
	font-size: 110%; 
	font-weight: bold;
}
.latesttweets .date { 
	padding: 4px 0px 8px; 
}

/*breadcrumbs*/
div#breadcrumb { 
	padding: 10px 0 4px 0; 
	margin-left: 20px; 
	font-size: 92%; 
	color: #505050; 
	border-bottom: 1px solid #FFC709; 
}
div#breadcrumb a { 
	color: #325A8A;
}

/* footer */ 
#footer { 
	text-align: center; 
	clear: both; 
	border-top: 15px solid #fff; 
	background: #325A8A; 
	color:#FFFFFF;
	padding:0px;
	margin-bottom:1em;
}
#footer a, #footer a:hover {
	color: #ffffff; 
}
#footer ul { 
	padding: 5px; 
	margin-top: 0px; 
}
#footer #footerbase { 
	background-color: #325A8A; 
	overflow: auto; 
	zoom: 1; 
}
#footer li { 
	display: inline; 
	font-size: 100%;
	padding-left:1em;
	padding-right:1em;
	border-left:1px solid white;
}

#footer li.first-item {
	border-left:0px solid white;
}

/* main content styles */
#content p {
	line-height: 1.4em; 
	padding: 0px 0;
}
#content {
	padding-top: 5px;  
	padding-right: 20px;
}
#content ul {
	margin:1em 0 1em 2em;
}

.small { 
	font-size: 80%; 
}
      
/* main-menu */
#main-menu {
	font-size: 110%; 
	background-color: #325A8A; 
	width: 960px;
	min-height:28px; 
	height:28px; 
	margin-left: 0; 
	clear: left; 
	overflow: visible; 
	border-top: 8px solid #FFC709; 
}
#main-menu a, #main-menu span, #main-menu li{
	color: #FFC709; 
}
#main-menu li {
	list-style-type:none;
}
#main-menu a, #main-menu span  {
	display: block; 
	float: left; 
	width: auto; 
	padding: 3px 10px 3px 10px; 
	text-decoration: none; 
	font-weight: 600; 
}
#main-menu a{
	float: right;
}
#main-menu ul {
	padding: 4px 8px 2px 0; 
	overflow: visible;
} 
#main-menu li {
	float: left; 
	background-color: #325A8A;
	margin: 0 15px 0 0;
}
#main-menu li ul li {
	height: auto; 
	border: none;
}
#main-menu li ul {
	/*position: absolute; 
	width: 10em; 
	left: -999em;
	z-index: 9999;*/
}
#main-menu a:hover, #main-menu li.sfhover ul { 
	left: auto; 
	color: #FFC709;
}
#main-menu li .selected { 
	color: #ffffff; 
}
/* ... */

